@@ -3,6 +3,8 @@
 	* Some manpage fixing.
 
 	* Fix some unlink corner cases.
+
+	* Fix some socket setup corner cases.
 	
 2005-08-04  Albert Chu  <chu11@llnl.gov>
 
